# vernon

auto_improve/: index.html
crm/: process_email.py
crm/users/_team-inbox/: notes_2026-03-16T10-37.md  notes_2026-03-16T11-12.md
crm/users/hugh-jones/: info.md  notes_2026-03-16T11-04.md
crm/users/matt/: info.md  notes_2026-03-16T11-04.md
crm/users/o-korlu/: info.md  notes_2026-03-16T11-12.md
kahn/: README.md
macaw/: convo.py
macaw/ep-agent/: CLAUDE.md  agent.py  check_writeup.py  cli.py  create_css.py  create_study_project.py  driver.py  ep-cli.sh  evals.md  publish_survey.py  push_to_coop.py  pyproject.toml  report.css  system_prompt.md
macaw/ep-agent/.claude/agents/: create-agent-list.md
macaw/ep-agent/skills/agent-lists/: SKILL.md
macaw/ep-agent/skills/coop-publishing/: SKILL.md
macaw/ep-agent/skills/edsl-study-files/: SKILL.md
macaw/ep-agent/skills/error-logging/: SKILL.md
macaw/ep-agent/skills/error-review/: SKILL.md
macaw/ep-agent/skills/file-store/: SKILL.md
macaw/ep-agent/skills/humanize/: SKILL.md
macaw/ep-agent/skills/literature-review/: SKILL.md
macaw/ep-agent/skills/study-checklist/: SKILL.md
macaw/ep-agent/skills/study-file-organization/: SKILL.md
macaw/ep-agent/skills/surveys/: SKILL.md
macaw/ep-agent/unused/: mit_faculty_satisfaction_survey.py  nyu_cafeteria_survey_results.csv  results.csv  study_agent_list.py  study_survey.py
macaw/ep-agent/writeup/: report.md
services/edsl-flow/: pyproject.toml
services/edsl-flow/src/edsl_flow/: __init__.py  service.py
vernon/extract/: parse_paper.py
(+30 files in other folders)
