[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edsl-flow"
version = "0.1.0"
description = "Survey flow visualization service plugin for EDSL"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Expected Parrot", email = "info@expectedparrot.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "edsl",
    "pydot>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://github.com/expectedparrot/edsl-flow"
Documentation = "https://docs.expectedparrot.com"

[project.entry-points."edsl.services"]
flow = "edsl_flow:FlowService"

[tool.setuptools.packages.find]
where = ["src"]
